# mpc-bicycle-tracking

./: .gitignore  CMakeLists.txt  README.md  config.yaml  dockerfile
include/: bicycle_model.hpp  mpc.hpp  reference_generator.hpp
scripts/: base_plot_results.py  plot_interactive_3D.py  plot_results.py  plot_results_with_control_and_error.py  visualization_QR.py
src/: bicycle_model.cpp  main.cpp  mpc.cpp  reference_generator.cpp
